--- a/countDown.html
+++ b/countDown.html
@@ -102,9 +102,9 @@ body{
 
 </body>
 <script>
-    const year = new Date().getFullYear();
-const myDate = new Date('Oct 15, 2024 00:00:00');
-console.log(myDate);
+    const year = new Date().getFullYear ();
+const myDate = new Date ( 'Feb 23, 2022 17:00:00´);
+                         console.log(myDate);
 
 // countdown
 let timer = setInterval(function() {
